--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "gsap": "^3.12.5",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
