--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-i18next": "^14.1.2",
     "sharp": "^0.33.3",
+    "sweetalert2": "^11.13.0",
     "vercel": "^33.6.1"
   },
   "devDependencies": {
